<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/flashcardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:id="@+id/exampleFlashcard">

<!--                style="?android:textAppearanceLarge"-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_front"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:alpha="1"
            app:strokeColor="@color/gray"
            app:strokeWidth="3dp"
            android:foreground="?selectableItemBackground"
            style="@style/Theme.Scroll.AppBarOverlay"
            app:contentPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_front"
                style="@style/Theme.Scroll.AppBarOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/place_holder"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:alpha="0"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="3dp"
            android:foreground="?selectableItemBackground"
            style="@style/Theme.Scroll.AppBarOverlay"
            app:contentPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tableRow"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_back"
                    style="@style/Theme.Scroll.AppBarOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/place_holder"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/buttonPrev"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/button_previous" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/button_next" />
        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>